---
source: compiler-core/src/type_/tests/errors.rs
expression: "type GleamOption(okType) = Result(okType, Nil)"
---
error: Invalid type variable name
  ┌─ /src/one/two.gleam:1:18
  │
1 │ type GleamOption(okType) = Result(okType, Nil)
  │                  ^^^^^^ This is not a valid type variable name

Hint: Type Variable names start with a lowercase letter and contain a-z, 0-
9, or _.
Try: ok_type
